--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,8 @@ repositories {
 }
 
 dependencies {
-//    compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.10'
-
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.2'
 }
 
 // Java version selection
